fixed input padding and dark mode spacing

--- a/To-do-app/src/app/components/navi/navi.component.css
+++ b/To-do-app/src/app/components/navi/navi.component.css
@@ -22,10 +22,6 @@
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.13);
 }
 
-.darklogo {
-  margin-left: 4px;
-}
-
 .darklogo,
 .lightlogo {
   display: flex;
