--- a/To-do-app/src/app/components/newtask/newtask.component.css
+++ b/To-do-app/src/app/components/newtask/newtask.component.css
@@ -10,6 +10,7 @@
     border: 2px solid #E5E5E5;
     background-color: #FBFBFB;
     padding-left: 30px;
+    padding-right: 160px;
     font-size: 20px;
 }
 
